fix #432 Added Spark.ignite() and rename support